# CustomComponentTest

./: .gitignore  CMakeLists.txt  CallFactory.cpp  CallFactory.h  Component.h  ReadMe.md  main.cpp
Diagram/: Diagram.pu
Engine/: CallFactory.cpp  main.cpp
Factory/: CMakeLists.txt  Factory.cpp  Factory.h
Factory/Component/: AComponent.cpp  AComponent.h  BComponent.cpp  BComponent.h  CMakeLists.txt
UserFolder/: CMakeLists.txt
UserFolder/Component/: AComponent.h  BComponent.h
